Create nojekyll file at the end

--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -61,7 +61,7 @@ jobs:
       - name: Build with Next.js
         run: pnpm next build
       - name: Static HTML export with Next.js
-        run: pnpm next export
+        run: pnpm next export && touch ./out/.nojekyll
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
