--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "nextra": "^2.2.15",
     "nextra-theme-docs": "^2.2.15",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sharp": "^0.31.3"
   },
   "devDependencies": {
     "@types/node": "18.14.1",
