--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "SRTeam",
   "license": "ISC",
   "dependencies": {
+    "@heroicons/react": "^2.0.16",
     "next": "^13.2.1",
     "nextra": "^2.2.16",
     "nextra-theme-docs": "^2.2.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-timeago": "^7.1.0",
     "sharp": "^0.31.3"
   },
   "devDependencies": {
