--- a/package.json
+++ b/package.json
@@ -11,17 +11,16 @@
   "license": "ISC",
   "dependencies": {
     "@heroicons/react": "^2.0.16",
-    "next": "^13.2.1",
-    "nextra": "^2.2.16",
-    "nextra-theme-docs": "^2.2.16",
+    "next": "^13.2.4",
+    "nextra": "^2.2.20",
+    "nextra-theme-docs": "^2.2.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-timeago": "^7.1.0",
-    "sharp": "^0.32.0"
+    "react-timeago": "^7.1.0"
   },
   "devDependencies": {
     "@types/node": "18.15.7",
-    "autoprefixer": "^10.4.13",
+    "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
     "typescript": "5.0.2"
