--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -12,11 +12,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - uses: pnpm/action-setup@v2
+      - uses: pnpm/action-installation@v2
         with:
           version: 6.32.9
       - name: Setup Node
-        uses: actions/setup-node@v3
+        uses: actions/installation-node@v3
         with:
           node-version: "16"
           cache: pnpm
@@ -31,6 +31,6 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: pnpm installation --frozen-lockfile
       - name: Build with Next.js
         run: pnpm next build
