--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -31,6 +31,6 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-
       - name: Install dependencies
-        run: pnpm installation --frozen-lockfile
+        run: pnpm install --frozen-lockfile
       - name: Build with Next.js
         run: pnpm next build
