--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 NEXT_PUBLIC_DISCORD_LINK=https://discord.com/invite/aKm3B52
+NEXT_PUBLIC_GITHUB_LINK=https://github.com/SkinsRestorer/SkinsRestorerX
+NEXT_PUBLIC_SPIGOT_LINK=https://www.spigotmc.org/resources/skinsrestorer.2124
+NEXT_PUBLIC_DONATE_LINK=https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=5U2HMU5QU3BSE&source=url
