--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "next": "^14.2.2",
+    "next-plausible": "^3.12.0",
     "next-sitemap": "^4.2.3",
     "nextra": "^2.13.4",
     "nextra-theme-docs": "^2.13.4",
