--- a/package.json
+++ b/package.json
@@ -15,14 +15,25 @@
   "license": "ISC",
   "dependencies": {
     "@heroicons/react": "^2.1.3",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "file-saver": "^2.0.5",
+    "lucide-react": "^0.394.0",
     "next": "^14.2.2",
     "next-plausible": "^3.12.0",
     "next-sitemap": "^4.2.3",
+    "next-themes": "^0.3.0",
     "nextra": "^2.13.4",
     "nextra-theme-docs": "^2.13.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-timeago": "^7.2.0"
+    "react-timeago": "^7.2.0",
+    "sonner": "^1.5.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "20.14.2",
