--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The code for our website and documentation!",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "postbuild": "next-sitemap",
     "start": "next start",
@@ -18,6 +18,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@theguild/remark-mermaid": "^0.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "file-saver": "^2.0.5",
@@ -26,8 +27,8 @@
     "next-plausible": "^3.12.0",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.0",
-    "nextra": "^3.0.0",
-    "nextra-theme-docs": "^3.0.0",
+    "nextra": "^4.0.4",
+    "nextra-theme-docs": "^4.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-timeago": "^7.2.0",
