--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "skinsrestorer.net",
   "version": "1.0.0",
   "description": "The code for our website and documentation!",
-  "main": "index.js",
   "scripts": {
     "dev": "next dev --turbo",
     "build": "next build",
@@ -21,7 +20,6 @@
     "@theguild/remark-mermaid": "^0.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "file-saver": "^2.0.5",
     "lucide-react": "^0.473.0",
     "next": "^15.0.0",
     "next-plausible": "^3.12.0",
@@ -34,15 +32,17 @@
     "react-timeago": "^7.2.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "file-saver": "^2.0.5"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "4.0.0-beta.9",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "22.10.7",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
-    "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "4.0.0-beta.9",
     "typescript": "5.7.3"
   }
 }
