--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "skinsrestorer.net",
   "version": "1.0.0",
   "description": "The code for our website and documentation!",
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbo",
     "build": "next build",
