--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The code for our website and documentation!",
   "type": "module",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "postbuild": "next-sitemap && pagefind --site .next/server/app --output-path public/_pagefind",
     "start": "next start",
