--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "postbuild": "next-sitemap && pagefind --site .next/server/app --output-path public/_pagefind",
+    "postbuild": "pagefind --site .next/server/app --output-path public/_pagefind",
     "start": "next start",
     "lint": "next lint"
   },
@@ -26,7 +26,6 @@
     "lucide-react": "^0.473.0",
     "next": "^15.0.0",
     "next-plausible": "^3.12.0",
-    "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.0",
     "nextra": "^4.0.4",
     "nextra-theme-docs": "^4.0.4",
