--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "The code for our website and documentation!",
   "type": "module",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
-    "postbuild": "pagefind --site .next/server/app --output-path public/_pagefind",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "typecheck": "tsc --noEmit",
+    "postinstall": "fumadocs-mdx"
   },
   "keywords": [],
   "author": "SRTeam",
@@ -58,6 +59,7 @@
     "@eslint/eslintrc": "^3.3.1",
     "@octokit/openapi-types": "^25.0.0",
     "@tailwindcss/postcss": "4.1.13",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "22.18.6",
     "@types/react": "19.1.13",
     "eslint": "^9.33.0",
