--- a/package.json
+++ b/package.json
@@ -55,17 +55,13 @@
     "zod": "^4.0.17"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.3.1",
     "@octokit/openapi-types": "^26.0.0",
     "@tailwindcss/postcss": "4.1.14",
     "@types/file-saver": "^2.0.7",
     "@types/node": "22.18.8",
     "@types/react": "19.2.2",
-    "eslint": "^9.33.0",
-    "eslint-config-next": "15.5.4",
-    "eslint-config-prettier": "^10.1.8",
+    "biome": "^0.3.3",
     "postcss": "^8.4.35",
-    "prettier": "^3.5.3",
     "tailwindcss": "4.1.14",
     "tw-animate-css": "^1.3.7",
     "typescript": "5.9.3"
@@ -73,6 +69,7 @@
   "pnpm": {
     "onlyBuiltDependencies": [
       "@tailwindcss/oxide",
+      "core-js",
       "esbuild",
       "sharp",
       "unrs-resolver"
