--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "dev": "next dev --turbopack",
     "build": "next build --experimental-build-mode compile --turbopack",
     "start": "next start",
-    "lint": "next lint",
     "typecheck": "tsc --noEmit",
+    "fix": "biome check --write --unsafe",
+    "check": "biome check",
     "postinstall": "fumadocs-mdx"
   },
   "keywords": [],
@@ -55,12 +56,12 @@
     "zod": "^4.0.17"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.2.5",
     "@octokit/openapi-types": "^26.0.0",
     "@tailwindcss/postcss": "4.1.14",
     "@types/file-saver": "^2.0.7",
     "@types/node": "22.18.10",
     "@types/react": "19.2.2",
-    "biome": "^0.3.3",
     "postcss": "^8.4.35",
     "tailwindcss": "4.1.14",
     "tw-animate-css": "^1.3.7",
