--- a/package.json
+++ b/package.json
@@ -45,12 +45,14 @@
     "octokit": "^5.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-skinview3d": "^7.0.0",
     "react-timeago": "^8.0.0",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.1",
     "remark-mdx": "^3.1.0",
     "remark-rehype": "^11.1.2",
     "shiki": "^3.10.0",
+    "skinview3d": "^3.4.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.17"
