fix: parse tailwind directives

--- a/biome.json
+++ b/biome.json
@@ -40,6 +40,11 @@
       "project": "recommended"
     }
   },
+  "css": {
+    "parser": {
+      "tailwindDirectives": true
+    }
+  },
   "assist": {
     "actions": {
       "source": {
