Update linter rules and domain settings in biome.json

--- a/biome.json
+++ b/biome.json
@@ -29,15 +29,12 @@
   "linter": {
     "enabled": true,
     "rules": {
-      "recommended": true,
-      "suspicious": {
-        "noUnknownAtRules": "off"
-      }
+      "recommended": true
     },
     "domains": {
-      "next": "recommended",
-      "react": "recommended",
-      "project": "recommended"
+      "next": "all",
+      "react": "all",
+      "project": "all"
     }
   },
   "css": {
