feat: add posthog

--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "next-plausible": "^3.12.0",
     "next-themes": "^0.4.6",
     "octokit": "^5.0.3",
+    "posthog-js": "^1.292.0",
+    "posthog-node": "^5.11.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-skinview3d": "^7.0.0",
