--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ NEXT_PUBLIC_SPIGOT_LINK=https://www.spigotmc.org/resources/skinsrestorer.2124
 NEXT_PUBLIC_MODRINTH_LINK=https://modrinth.com/plugin/skinsrestorer
 NEXT_PUBLIC_DONATE_LINK=https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=5U2HMU5QU3BSE&source=url
 NEXT_PUBLIC_BSTATS_LINK=https://bstats.org/plugin/bungeecord/SkinsRestorer/1686
+NEXT_PUBLIC_POSTHOG_KEY=phc_PiA4lEVOouI4hJ8fsh6wNy1GB3HWe8VcLcjdluef34m
+NEXT_PUBLIC_POSTHOG_HOST=https://eu.i.posthog.com
