--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/react": "19.2.9",
     "babel-plugin-react-compiler": "^1.0.0",
     "postcss": "^8.4.35",
+    "shadcn": "^3.7.0",
     "tailwindcss": "4.1.18",
     "tw-animate-css": "^1.3.7",
     "typescript": "5.9.3"
